[metadata]
name = tower
version = 1.0
description = Your description
long_description = A longer description
license = Your license here
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = false
packages = find:
install_requires =
    click==8.*
    pygame==2.*
    structlog

[options.package_data]
tower.assets.gfx = *.png
tower.assets.levels = *.json

[options.entry_points]

console_scripts =
    tower = tower.main:main